compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "record Thing { Thing(unknown: x) }"
---
----- SOURCE CODE
record Thing { Thing(unknown: x) }

----- ERROR
error: Unknown type
  ┌─ /src/one/two.rakun:1:31
  │
1 │ record Thing { Thing(unknown: x) }
  │                               ^

The type `x` is not defined or imported in this module.
